<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="635dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_fan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/hand_fan_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18" />
            <TextView
                android:id="@+id/tv_motor_status1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:layout_toRightOf="@+id/tv_fan"
                android:text="@string/close"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18"
                android:visibility="gone" />
            <RadioGroup
                android:id="@+id/motor_group1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/motor_rb_close1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_radio"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="高功率"
                    android:textColor="@color/gray_03"
                    />
                <RadioButton
                    android:id="@+id/motor_rb_open1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_radio"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="低功率"
                    android:textColor="@color/gray_03"
                    android:checked="true"/>
            </RadioGroup>

        </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5px"
            android:background="#E8E8E6" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_light1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/hand_light_title1"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18" />
            <Button
                android:id="@+id/btn_light1"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="2dp"
                android:background="@drawable/selector_radio"
                android:button="@null"
                android:gravity="center"
                android:text="控制"
                android:textColor="@color/gray_03" />
        </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5px"
            android:background="#E8E8E6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/hand_light_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18" />

            <Button
                android:id="@+id/btn_light"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="2dp"
                android:background="@drawable/selector_radio"
                android:button="@null"
                android:gravity="center"
                android:text="控制"
                android:textColor="@color/gray_03" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5px"
            android:background="#E8E8E6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_motor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/hand_motor_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18" />

            <TextView
                android:id="@+id/tv_motor_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:layout_toRightOf="@+id/tv_motor"
                android:text="@string/stop"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/motor_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/motor_rb_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_radio"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="制冷"
                    android:textColor="@color/gray_03" />

                <RadioButton
                    android:id="@+id/motor_rb_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_radio"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="制热"
                    android:textColor="@color/gray_03" />

                <RadioButton
                    android:id="@+id/motor_rb_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_radio"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="停止"
                    android:textColor="@color/gray_03" />
            </RadioGroup>
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5px"
            android:background="#E8E8E6" />
    </LinearLayout>
</LinearLayout>

